# litecoin

./: .gitignore  CMakeLists.txt  README.md
src/: CLionSources.txt  CMakeLists.txt  Makefile.am  Makefile.qt.include  Makefile.test.include  base58.cpp  base58.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  coins.cpp  coins.h  init.cpp  miner.cpp  miner.h  txdb.cpp  txmempool.cpp  txmempool.h  validation.cpp  validation.h
src/consensus/: consensus.h  tx_verify.cpp
src/primitives/: transaction.cpp  transaction.h
src/qt/: sendcoinsdialog.cpp  sendcoinsdialog.h
src/qt/forms/: sendcoinsdialog.ui
src/rpc/: client.cpp  misc.cpp
src/script/: interpreter.h  script.cpp  script.h  sigcache.h
src/test/: coins_tests.cpp  test_bitcoin.cpp  test_bitcoin.h
src/wallet/: wallet.cpp  wallet.h
